--- a/app/index.html
+++ b/app/index.html
@@ -11,34 +11,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
   <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-  <link rel="stylesheet" href="bower_components/materialize/dist/css/materialize.css">
+  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="app.css">
+
+  <base href="/">
 </head>
+
+<img id="logo" src="img/logo.png"/>
+
 <nav>
-  <div class="nav-wrapper purple lighten-3">
-    <ul id="nav-mobile" class="right hide-on-med-and-down">
-      <li><a href="sass.html">Sass</a></li>
-      <li><a href="badges.html">Components</a></li>
-      <li><a href="collapsible.html">JavaScript</a></li>
-    </ul>
-  </div>
+  <ul class="navbar">
+    <li><a href="/">Home</a></li>
+    <li><a href="/about">About</a></li>
+    <li><a href="/contact">Contact</a></li>
+  </ul>
 </nav>
+
 <body>
   <div class="container">
-    <h1>Sammys</h1>
-    <div class="row">
-      <div class="col s12">
-        <p>Welcome to our website.</p>
-      </div>
-    </div>
     <div ng-view></div>
-    <div>Angular seed app: v<span app-version></span></div>
   </div>
-
-  <script src="bower_components/angular/angular.js"></script>
-  <script src="bower_components/angular-route/angular-route.js"></script>
-  <script src="app.js"></script>
-  <script src="view1/view1.js"></script>
-  <script src="view2/view2.js"></script>
 </body>
+
+<script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/angular-route/angular-route.js"></script>
+<script src="app.js"></script>
+<script src="about/about.js"></script>
+<script src="view2/view2.js"></script>
 </html>
