migrate to scss from css

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="app.css">
+  <link rel="stylesheet" href="../css/compiled/app.css">
 
   <base href="/home">
 </head>
@@ -28,9 +28,7 @@
 </nav>
 
 <body>
-  <div class="container">
-    <div ng-view></div>
-  </div>
+  <div ng-view></div>
 </body>
 
 <foooter>
