change fonts, spacing

--- a/app/index.html
+++ b/app/index.html
@@ -9,8 +9,7 @@
   <title>UC Berkeley SAM</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-  <link rel="stylesheet" href="bower_components/hover/css/hover.css">
+  <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
   <link rel="stylesheet" href="../css/compiled/app.css">
 </head>
 <div class="header-container">
